--- a/source/_data/languages.yml
+++ b/source/_data/languages.yml
@@ -5,20 +5,20 @@ zh-CN:
     links: 链接
     travellings: 开往
     webstack: 网址
-    friends: 友達
+    friends: 友链
 
 zh-HK:
   menu:
     links: 链接
     travellings: 開往
-    friends: 友達
+    friends: 友链
     webstack: 網址
 
 zh-TW:
   menu:
     links: 链接
     travellings: 開往
-    friends: 友達
+    friends: 友链
     webstack: 網址
 
 en:
