--- a/_config.shoka.yml
+++ b/_config.shoka.yml
@@ -131,7 +131,7 @@ widgets:
   # if true, will show random posts
   random_posts: true
   # if true, will show recent comments
-  recent_comments: true
+  recent_comments: false
 
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
@@ -183,35 +183,35 @@ creative_commons:
 # Comments
 # Valine
 # For more information: https://github.com/amehime/MiniValine
-valine:
-  appId: wHkB2y358Pb7Rqxu8OUcmeON-MdYXbMMI #Your_appId
-  appKey: ihGbSsuJsHDKpnqKRDL9VhXa #Your_appkey
-  placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
-  avatar: mp # Gravatar style : mp, identicon, monsterid, wavatar, robohash, retro
-  pageSize: 10 # Pagination size
-  lang: zh-CN
-  visitor: true # Article reading statistic
-  NoRecordIP: false # Whether to record the commenter IP
-  serverURLs: # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
-  powerMode: true
-  tagMeta:
-    visitor: 新朋友
-    master: 主人
-    friend: 小伙伴
-    investor: 金主粑粑
-  tagColor:
-    master: "var(--color-orange)"
-    friend: "var(--color-aqua)"
-    investor: "var(--color-pink)"
-  tagMember:
-    master:
-      # - hash of master@email.com
-      # - hash of master2@email.com
-    friend:
-      # - hash of friend@email.com
-      # - hash of friend2@email.com
-    investor:
-      # - hash of investor1@email.com
+# valine:
+#   appId: wHkB2y358Pb7Rqxu8OUcmeON-MdYXbMMI #Your_appId
+#   appKey: ihGbSsuJsHDKpnqKRDL9VhXa #Your_appkey
+#   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
+#   avatar: mp # Gravatar style : mp, identicon, monsterid, wavatar, robohash, retro
+#   pageSize: 10 # Pagination size
+#   lang: zh-CN
+#   visitor: true # Article reading statistic
+#   NoRecordIP: false # Whether to record the commenter IP
+#   serverURLs: # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
+#   powerMode: true
+#   tagMeta:
+#     visitor: 新朋友
+#     master: 主人
+#     friend: 小伙伴
+#     investor: 金主粑粑
+#   tagColor:
+#     master: "var(--color-orange)"
+#     friend: "var(--color-aqua)"
+#     investor: "var(--color-pink)"
+#   tagMember:
+#     master:
+#       # - hash of master@email.com
+#       # - hash of master2@email.com
+#     friend:
+#       # - hash of friend@email.com
+#       # - hash of friend2@email.com
+#     investor:
+#       # - hash of investor1@email.com
 
 # bgm
 audio:
